fix navbar not showing on loading of small screens and smooths change of ui on change of window size

--- a/files/unminified/static/css/style.css
+++ b/files/unminified/static/css/style.css
@@ -108,6 +108,7 @@ a:focus {
     grid-area: main;
     overflow: hidden;
     word-wrap: break-word;
+    max-width: 95vw;
 }
 
 /* Modal styles -------------------------------------------------*/
@@ -479,8 +480,7 @@ button:disabled {
 
 
 /* Mobile styles -------------------------------------------------*/
-@media only screen
-  and (max-device-width: 820px) {
+@media screen and (max-width: 820px) {
     /* Structure ------------*/
     .container {
         grid-template-rows: auto 1fr;
